ssh-oscar-1.2.2 (not yet released):
- Modify the Makefile so we can choose the directory to save sources when
creating RPMs.

ssh-oscar-1.2.1:
- Add the Debian support.

ssh-oscar-1.2:
- Include the patch from Ansgar Esztermann: in ssh-oscar.sh, checks for the
existance of the home directory instead of entering into the home directory.
- Add a clean Makefile to generate a tarball and a RPM.
- Clean up and fix the spec file.

ssh-oscar-1.1:
- Ensure that SSH keys are not generated for user "nobody".
- Update scripts to use getent.
- ssh-oscar and sync_users made into seperate packages.
- Updated to work with C3-3

ssh-oscar-1.0:
- Initial release.