@@ -1,6 +1,6 @@
 DESTDIR=
+PKGDEST=
 SOURCEDIR=/usr/src/redhat/SOURCES
-
 PKG=ssh-oscar
 
 FILES := ssh-oscar.csh ssh-oscar.sh Makefile install postinst
@@ -16,7 +16,16 @@ install: clean
 
 deb:
 	cp -f postinst debian/
-	dpkg-buildpackage -rfakeroot
+	@if [ -n "$$UNSIGNED_OSCAR_PKG" ]; then \
+        echo "dpkg-buildpackage -rfakeroot -us -uc"; \
+        dpkg-buildpackage -rfakeroot -us -uc; \
+    else \
+        echo "dpkg-buildpackage -rfakeroot"; \
+        dpkg-buildpackage -rfakeroot; \
+    fi
+	@if [ -n "$(PKGDEST)" ]; then \
+        mv ../$(PKG)*.deb $(PKGDEST); \
+    fi
 
 clean:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} clean ) ; done
@@ -36,3 +45,6 @@ dist: clean
 rpm: dist
 	cp $(PKG).tar.gz $(SOURCEDIR)
 	rpmbuild -bb ./$(PKG).spec
+	@if [ -n "$(PKGDEST)" ]; then \
+        mv `rpm --eval '%{_topdir}'`/RPMS/noarch/$(PKG)-*.noarch.rpm $(PKGDEST); \
+    fi
