@@ -1,4 +1,8 @@
 ssh-oscar-1.2.2 (not yet released):
+- Modify the Makefile so we can choose the directory where the binary packages
+are stored.
+- Enable the creation of unsigned Debian packages by setting the
+UNSIGNED_OSCAR_PKG environment variable.
 - Modify the Makefile so we can choose the directory to save sources when
 creating RPMs.
 
